Fix cannot access class sun.nio.ch.DirectBuffer errors